Changelog
=========

1.1.3 (unreleased)
------------------

- Add support for Plone 5.1.x. [mbaechtold]

- Drop support for Plone 4.2.x. [mbaechtold]


1.1.2 (2017-08-08)
------------------

- Enable the footer on non-contentish items.
  [lknoepfel]


1.1.1 (2016-05-20)
------------------

- CSS adjustment for compatibility with newer plonetheme.blueberry.
  [Kevin Bieri]


1.1.0 (2016-03-03)
------------------

- Use alternate color for links in the footer.
  Remove border below the footer portlets.
  [Kevin Bieri]

- Adapt footer styling based on ftw.theming rework.
  [Kevin Bieri]

- Implement responsive footer according the latest ftw.theming implementation.
  [mathias.leimgruber]

- Translate the lawgiver action group to be used in German workflow specifications.
  [mbaechtold]


1.0.3 (2015-09-02)
------------------

- Define resources for ftw.theming.
  [Kevin bieri]


1.0.2 (2014-12-23)
------------------

- Do not redirect to manage-footer view after modifying regular portlet
  managers.
  [mathias.leimgruber]


1.0.1 (2014-12-02)
------------------

- Stay on the footer management view after modifying the portlet blacklist status.
  [mbaechtold]


1.0.0 (2013-09-24)
------------------

- Initial release