@@ -12,7 +12,7 @@
        tal:attributes="class python: view.generate_classes('ftw.footer.column4')"
        tal:content="structure provider:ftw.footer.column4" />
   <div class="visualClear"><!-- --></div>
-  <div class="managePortletsLink" tal:condition="view/has_permission">
+  <div class="managePortletsLink" tal:condition="view/can_manage">
     <a tal:attributes="href string:${context/absolute_url}/manage-footer" i18n:translate="">Manage Footer</a>
   </div>
 </div>
